# features/tags/apihandler.go
@@ -3,10 +3,9 @@ package tags
 import (
 	"net/http"
 
-	log "github.com/sirupsen/logrus"
-
-	"github.com/bihe/mydms/core"
+	"github.com/bihe/mydms/internal/errors"
 	"github.com/labstack/echo/v4"
+	log "github.com/sirupsen/logrus"
 )
 
 // Tag is the json representation of the persistence entity
@@ -26,9 +25,9 @@ type Handler struct {
 // @Tags tags
 // @Produce  json
 // @Success 200 {array} tags.Tag
-// @Failure 401 {object} core.ProblemDetail
-// @Failure 403 {object} core.ProblemDetail
-// @Failure 404 {object} core.ProblemDetail
+// @Failure 401 {object} errors.ProblemDetail
+// @Failure 403 {object} errors.ProblemDetail
+// @Failure 404 {object} errors.ProblemDetail
 // @Router /api/v1/tags [get]
 func (h *Handler) GetAllTags(c echo.Context) error {
 	var (
@@ -39,7 +38,7 @@ func (h *Handler) GetAllTags(c echo.Context) error {
 	log.Debug("return all available tags.")
 
 	if tags, err = h.R.GetAllTags(); err != nil {
-		return core.NotFoundError{Err: err, Request: c.Request()}
+		return errors.NotFoundError{Err: err, Request: c.Request()}
 	}
 
 	for _, t := range tags {
@@ -55,9 +54,9 @@ func (h *Handler) GetAllTags(c echo.Context) error {
 // @Produce  json
 // @Param name query string true "SearchString"
 // @Success 200 {array} tags.Tag
-// @Failure 401 {object} core.ProblemDetail
-// @Failure 403 {object} core.ProblemDetail
-// @Failure 404 {object} core.ProblemDetail
+// @Failure 401 {object} errors.ProblemDetail
+// @Failure 403 {object} errors.ProblemDetail
+// @Failure 404 {object} errors.ProblemDetail
 // @Router /api/v1/tags/search [get]
 func (h *Handler) SearchForTags(c echo.Context) error {
 	var (
@@ -71,7 +70,7 @@ func (h *Handler) SearchForTags(c echo.Context) error {
 	log.Printf("search for tags which match '%s'.", s)
 
 	if tags, err = h.R.SearchTags(s); err != nil {
-		return core.NotFoundError{Err: err, Request: c.Request()}
+		return errors.NotFoundError{Err: err, Request: c.Request()}
 	}
 
 	for _, t := range tags {
